# Boolean-Logic-Optimizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: canonical.hpp  truth_table.hpp
src/: canonical.cpp  main.cpp  truth_table.cpp
